<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_poster_image">Movie Poster Image</string>
    <string name="sort_label">Sort</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="backdrop_image">Backdrop Image</string>
    <string name="info"><u>Info</u></string>
    <string name="overview">Overview</string>
    <string name="overview_underlined"><u>Overview</u></string>
    <string name="full_rating_10">/10</string>
    <string name="trailers_underlined"><u>Trailers</u></string>
    <string name="trailer_poster">Trailer Poster</string>
    <string name="play_image">Play Image</string>
    <string name="read_more">Read More…</string>
    <string name="reviews_underlined"><u>Reviews</u></string>
    <string name="close">Close</string>
    <string name="no_reviews_available">No reviews available.</string>
    <string name="no_trailers_available">No trailers available.</string>
    <string name="share_trailer">Share Trailer</string>
    <string name="share_trailer_content">What the trailer of \'%s\' on YouTube %s</string>
    <string name="favourite">Favourite</string>
    <string name="favourited">Favourited</string>
    <string name="unable_to_get_movies">Unable to get movies :(</string>
    <string name="no_favourite_movies">No movies found. Press the favourite button on a movie and it will show up in here.</string>
    <string name="unable_to_get_reviews">Unable to get reviews.</string>
    <string name="unable_to_get_trailers">Unable to get trailers.</string>
</resources>
