<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:padding="16dp"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/sortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_label"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/popularButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="#29004f00"
        android:foreground="?selectableItemBackground"
        android:text="@string/popular"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/topRatedButton"
        app:layout_constraintTop_toBottomOf="@id/sortLabel" />

    <Button
        android:id="@+id/topRatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="#29004f00"
        android:foreground="?selectableItemBackground"
        android:text="@string/top_rated"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/popularButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/popularButton" />

</android.support.constraint.ConstraintLayout>