<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:descendantFocusability="blocksDescendants"
    android:fitsSystemWindows="true"
    tools:context=".moviedetail.MovieDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/backdrop_image_height"
            android:fitsSystemWindows="true"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdropImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/backdrop_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title=" ">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp">

            <ImageView
                android:id="@+id/movieImageView"
                android:layout_width="140dp"
                android:layout_height="210dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/movie_poster_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/movieImageView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="The Martian" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0.7"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toLeftOf="@id/nameTextView"
                app:layout_constraintTop_toBottomOf="@id/nameTextView"
                tools:text="June 22, 2007" />

            <TextView
                android:id="@+id/ratingsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/nameTextView"
                app:layout_constraintTop_toBottomOf="@id/dateTextView"
                tools:text="7.3" />

            <TextView
                android:id="@+id/fullRatingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/full_rating_10"
                android:textColor="@android:color/white"
                app:layout_constraintBaseline_toBaselineOf="@id/ratingsTextView"
                app:layout_constraintLeft_toRightOf="@id/ratingsTextView" />

            <TextView
                android:id="@+id/overviewLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/overview_underlined"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieImageView" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/grey_200"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@id/overviewLabel"
                app:layout_constraintRight_toRightOf="@id/overviewLabel"
                app:layout_constraintTop_toBottomOf="@id/overviewLabel"
                tools:text="@tools:sample/lorem/random" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextView">

                <TextView
                    android:id="@+id/trailersLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/trailers_underlined"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/noTrailersAvailableTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/no_trailers_available"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailersRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/reviewLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/reviews_underlined"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/noReviewsAvailableTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/no_reviews_available"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reviewsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    app:layout_constraintTop_toBottomOf="@id/reviewLabel">

                </android.support.v7.widget.RecyclerView>

                <Button
                    android:id="@+id/shareTrailerButton"
                    style="@style/GreenOutlineButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/share_trailer"
                    android:visibility="gone" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>